# math

./: .gitignore  .makim.yaml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  api.html  changelog.html  conda.yaml  index.html  installation.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
conda/: dev.yaml  release.yaml
docs/: .gitignore  _quarto.yml  api.qmd  changelog.qmd  index.qmd  installation.qmd  styles.css
docs/lessons/: _lesson-template.qmd  index.qmd
docs/notebooks/: index.qmd
lessons/: index.html
lessons/algebra/: algebraic-modeling.html  cumulative-review.html  exponentials-and-logarithms.html  expressions-and-equations.html  functions-and-graphs.html  guessing_quiz.html  index.html  inequalities-and-absolute-value.html  linear-and-quadratic-functions.html  polynomials.html  rational-and-radical-functions.html  symbolic-computation-with-sympy.html  systems-of-equations.html  transformations-composition-inverses.html
lessons/calculus/: applications.html  derivative-rules.html  derivatives.html  index.html  integrals.html  integration-techniques.html  limits.html  optimization.html
lessons/colab/: usage.html
lessons/differential-equations/: first-order-equations.html  index.html  linear-equations.html  separable-equations.html  slope-fields.html  systems.html
notebooks/: index.html
tests/: test_algebra_helpers.py  test_algebra_quizes.py  test_calculus_helpers.py  test_core_answers.py  test_core_expressions.py  test_core_lessons_quizzes.py  test_core_plots.py  test_core_solutions.py  test_differential_equations_helpers.py  test_discrete_math_helpers.py  test_linear_algebra_helpers.py  test_package.py  test_phase_3_to_12_helpers.py  test_probability_helpers.py  test_python_fundamentals.py  test_solvers_equations.py  test_statistics_helpers.py  test_trigonometry_helpers.py  test_trigonometry_plots.py
(+363 files in other folders)
