[project]
name = "edu-math"
version = "0.1.0"  # semantic-release
description = "Python tools for math education workflows."
readme = "README.md"
requires-python = ">=3.10,<4"
license = "BSD-3-Clause"
authors = [
  { name = "Open Science Labs Incubator" }
]
keywords = [
  "education",
  "math",
  "python",
  "open-science",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/osl-incubator/edu-math"
Repository = "https://github.com/osl-incubator/edu-math"
Issues = "https://github.com/osl-incubator/edu-math/issues"
Documentation = "https://osl-incubator.github.io/edu-math/"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3",
  "makim==1.29.0",
]
docs = []

[tool.poetry.group.dev.dependencies]
quarto-cli = ">=1.9.0"
pytest = ">=8"
pytest-cov = ">=5"
ruff = ">=0.6"
mypy = ">=1.10"
pre-commit = ">=3"
makim = "==1.29.0"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "edumath", from = "src" },
]
include = [
  "src/edumath/py.typed",
]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "RUF",
]
ignore = [
  "D203",
  "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
